fix z-indexes for footer and become a distributor section

--- a/src/app/styles/common.scss
+++ b/src/app/styles/common.scss
@@ -41,6 +41,7 @@ body {
 
 main{
   position: relative;
+  z-index: 2;
   background-color: var(--white);
 }
 
